# compiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
checker/: check.cc  check.h
commands/: build.cc  build.h  check.cc  check.h  color.cc  color.h  command.cc  command.h  help.cc  help.h  ir.cc  ir.h  parse.cc  parse.h  run.cc  run.h
core/: common.h  error.cc  error.h  file.cc  file.h  location.h
emitter/: emit.cc  emit.h  expression.cc  expression.h  optimize.cc  optimize.h
parser/: ast.cc  ast.h  grammar.cc  grammar.h  grammar.y  parse.cc  parse.h  scanner.cc  scanner.h  scanner.l  state.h
